# advent-of-code-2024

./: .pre-commit-config.yaml  README.md  new_day.py  pyproject.toml
advent_of_code_2024/: all_days.py  day_00.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  utils.py
data/inputs/: .gitignore  day_00.txt
data/samples/: day_00.txt
tests/: test_day_00.py  test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py  test_day_10.py  test_day_11.py  test_day_12.py  test_day_13.py  test_day_14.py  test_day_15.py  test_day_16.py  test_day_17.py  test_day_18.py  test_day_19.py  test_day_20.py  test_day_21.py  test_day_22.py  test_day_23.py  test_day_24.py  test_day_25.py
